# my-consent-assistant

./: .gitignore  Makefile  README.md  SECURITY.md  agents.md  docker-compose.yml
backend/: .env.example  alembic.ini  debug_cql.py  pyproject.toml  test_chatbot_improvements.py  test_confluence_sync.py
backend/alembic/: env.py
backend/alembic/versions/: 20260323_0001_initial_schema.py  20260326_0002_add_synced_at_to_confluence.py  20260326_0003_create_embeddings_table.py  20260326_0004_add_confluence_page_embeddings.py
backend/app/: config.py  database.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  aha.py  analysis.py  chat.py  confluence.py  consent_flow.py  cosmos.py  embeddings.py  health.py
backend/app/models/: __init__.py  aha_feature.py  chat.py  confluence_page.py  confluence_page_embedding.py  embedding.py
backend/app/schemas/: __init__.py  aha.py  analysis.py  chat.py  confluence.py  cosmos.py
backend/app/services/: __init__.py  aha_service.py  analysis_service.py  azure_openai_service.py  chatbot_service.py  confluence_service.py  consent_flow_service.py  cosmos_assistant_service.py  cosmos_diagnostics_service.py  embedding_service.py
backend/app/tasks/: __init__.py  extract_keywords.py  generate_embeddings.py  generate_summaries.py  relationships.py  scheduler.py  sync_aha.py  sync_confluence.py  sync_embeddings.py
docs/: TECHNICAL_SPECS.md  aha_categories.json  consent_flow.md  consent_flow_embeddings.json  cosmos-container-flow.md  cosmos-data-model.md
frontend/: index.html  package-lock.json  package.json  (+1 more)
(+8 files in other folders)
