[tool.poetry]
name = "consent-dashboard-backend"
version = "0.1.0"
description = "Backend API for Consent Dashboard"
authors = ["Milap Shah <mshah@onetrust.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
sqlalchemy = "^2.0.35"
psycopg = { version = "^3.2.9", extras = ["binary"] }
alembic = "^1.13.3"
apscheduler = "^3.10.4"
pgvector = "^0.3.4"
sentence-transformers = "^3.1.1"
openai = "^1.47.0"
asyncpg = "^0.31.0"
azure-cosmos = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
